

2.3  operation.erl

- pack_mc/1 is now called pack_smsc/1.
- unpack_mc/1 is now called unpack_smsc/1.
- new_xxx/2 and new_xxx/3 functions removed.  See generic functions new/3 and 
  new/4.
- request_command_id/1 and response_command_id/1 redefined as macros in 
  smpp_globals.hrl.


3.   Changes 1.0 -> 1.1

- gen_connection removed.
- gen_esme and gen_smsc redesigned.
- gen_esme_session and gen_smsc_session redesigned.


4.   Changes 1.1 -> 1.2

- Removed unused vars warnings.

See other changes on individual files below.


4.1  smpp_base.hrl

- ESM_CLASS_DOMAIN fixed.  Thanks to hfventer for this fix.  
  The max values were less than the min values! Without this it would be 
  impossible to send binary content messages (like ring tones or WAP push).


4.2  sm.erl

- Functions reply_destination_address/1, reply_source_address/1 and
  reply_addresses/1 added.
  reply_address/1 will be removed in future releases, please use 
  reply_destination_address/1 instead.
- Functions udhi/1 and udhi/2 added.
- Function split_user_data/2 implemented.
- Function chop_udh/1 implemented.
- Function reference_number/1 implemented.
- Function join_user_data/1 added.
- Function total_segments/1 implemented.


4.3  gen_esme_session.erl

- New callback  handle_enquire_link_failure/3 added.
  See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
- Use proc_lib:spawn_link/1 instead of spawn_link.
- New function reference_number/1 implemented.


4.4  gen_esme.erl

- New callback handle_enquire_link_failure/2 added.
  See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
- handle_alert_notification/2 must have only 2 parameters and not 3, as 
  previously declared in behaviour_info/1.
- Functions session_start_link/2 and session_start_link/3 added.
- Use proc_lib:spawn_link/1 instead of spawn_link.
- Functions submit_sm/3 and	submit_multi/3 added.


4.5  smpp_globals.hrl

- SM_MAX_SIZE and SM_SEGMENT_MAX_SIZE macros defined.
